--- a/Bookstore.Business/Bookstore.Business.csproj
+++ b/Bookstore.Business/Bookstore.Business.csproj
@@ -10,6 +10,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="System.Diagnostics.Debug" Version="4.3.0" />
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Bookstore.DataAccess\Bookstore.DataAccess.csproj" />
   </ItemGroup>
