--- a/Bookstore.Business/Bookstore.Business.csproj
+++ b/Bookstore.Business/Bookstore.Business.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
     <PackageReference Include="System.Runtime.Handles" Version="4.3.0" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+    <PackageReference Include="System.Diagnostics.Debug" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
